--- a/packages/dockview-solid/package.json
+++ b/packages/dockview-solid/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@arminmajerie/dockview-solid",
-  "version": "4.5.6",
+  "version": "4.5.7",
   "description": "Zero dependency layout manager supporting tabs, grids and splitviews (SolidJS version)",
   "keywords": [
     "solid",
@@ -30,12 +30,12 @@
   },
   "license": "MIT",
   "author": "https://github.com/arminmajerie",
-  "main": "./dist/index.js",
-  "module": "./dist/index.js",
+  "main": "./dist/index.mjs",
+  "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
-      "import": "./dist/index.js",
+      "import": "./dist/index.mjs",
       "require": "./dist/index.js"
     }
   },
@@ -44,13 +44,14 @@
     "README.md"
   ],
   "scripts": {
-    "build": "tsup src/index.ts --format esm,cjs --dts --out-dir dist && node scripts/copy-css.js",
-
-    "clean": "rimraf dist",
-    "rebuild": "npm run clean && npm run build"
+    "clean": "rimraf dist/ .build/ .tsup",
+    "build": "npm run clean && vite build && node scripts/copy-css.js",
+    "lint": "eslint src --ext .ts,.tsx",
+    "prepublishOnly": "npm run build",
+    "rebuild": "npm run build"
   },
   "dependencies": {
-    "@arminmajerie/dockview": "^4.5.6"
+    "@arminmajerie/dockview": "^4.5.7"
   },
   "peerDependencies": {
     "solid-js": "^1.8.0"
