--- a/packages/dockview/package.json
+++ b/packages/dockview/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@arminmajerie/dockview",
-  "version": "4.5.6",
+  "version": "4.5.7",
   "description": "Zero dependency layout manager supporting tabs, grids and splitviews (SolidJS only)",
   "keywords": [
     "dockview",
@@ -25,21 +25,26 @@
   "license": "MIT",
   "author": "https://github.com/arminmajerie",
   "main": "./dist/index.js",
-  "module": "./dist/index.mjs",
+  "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "files": [
     "dist",
     "README.md"
   ],
   "scripts": {
-    "clean": "rimraf dist/ .build/ .tsup",
-    "build": "npm run clean && tsup src/index.ts --format esm,cjs --dts --out-dir dist && node scripts/copy-css.js",
+    "build": "npm run clean && tsc -p tsconfig.json && node scripts/copy-css.js",
+    "build:cjs": "tsc -p tsconfig.cjs.json",
+    "clean": "rimraf dist",
+
     "lint": "eslint src --ext .ts,.tsx",
     "prepublishOnly": "npm run build",
     "rebuild": "npm run build"
   },
   "dependencies": {
     "dockview-core": "^4.5.0"
+  },
+  "peerDependencies": {
+    "solid-js": "^1.9.7"
   },
   "devDependencies": {
     "eslint": "^8.56.0",
@@ -49,8 +54,6 @@
     "cross-env": "^7.0.3",
     "typedoc": "^0.28",
     "ts-node": "^10.9.2",
-    "tsup": "^8.5.0",
-    "vite": "^5.1.5",
-    "vite-plugin-solid": "^2.11.8"
+    "tsup": "^8.5.0"
   }
 }
