--- a/packages/dockview-solid/package.json
+++ b/packages/dockview-solid/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@arminmajerie/dockview-solid",
-  "version": "4.5.7",
+  "version": "4.5.8",
   "description": "Zero dependency layout manager supporting tabs, grids and splitviews (SolidJS version)",
   "keywords": [
     "solid",
@@ -30,13 +30,14 @@
   },
   "license": "MIT",
   "author": "https://github.com/arminmajerie",
-  "main": "./dist/index.mjs",
+  "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
       "import": "./dist/index.mjs",
-      "require": "./dist/index.js"
+      "require": "./dist/index.js",
+      "types": "./dist/index.d.ts"
     }
   },
   "files": [
@@ -45,7 +46,7 @@
   ],
   "scripts": {
     "clean": "rimraf dist/ .build/ .tsup",
-    "build": "npm run clean && vite build && node scripts/copy-css.js",
+    "build": "npm run clean && vite build && tsc -p tsconfig.json && node scripts/copy-css.js",
     "lint": "eslint src --ext .ts,.tsx",
     "prepublishOnly": "npm run build",
     "rebuild": "npm run build"
