--- a/packages/dockview-solid/package.json
+++ b/packages/dockview-solid/package.json
@@ -38,7 +38,8 @@
       "import": "./dist/index.mjs",
       "require": "./dist/index.js",
       "types": "./dist/index.d.ts"
-    }
+    },
+    "./styles/dockview.css": "./dist/styles/dockview.css"
   },
   "files": [
     "dist",
