--- a/packages/dockview-solid-example/package.json
+++ b/packages/dockview-solid-example/package.json
@@ -1,26 +1,25 @@
 {
   "name": "dockview-solid-example",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "",
   "type": "module",
-  "scripts": {
-    "build": "rm -rf dist && vite build",
-    "server": "npm run build && vite preview",
-    "rebuild": "npm run build"
-  },
   "license": "MIT",
   "devDependencies": {
     "@tailwindcss/vite": "^4.0.8",
     "tailwindcss": "^4.0.7",
     "typescript": "^5.7.2",
     "vite": "^6.0.0",
-    "vite-plugin-solid": "^2.11.6"
+    "vite-plugin-solid": "^2.11.6",
+    "solid-js": "^1.8.0"
   },
   "dependencies": {
-    "@arminmajerie/dockview-solid": "^4.5.12",
-    "dockview-core": "^4.7.1",
+    "@arminmajerie/dockview-solid": "4.5.13",
     "@suid/icons-material": "^0.8.1",
-    "@suid/material": "^0.18.0",
-    "solid-js": "^1.9.5"
+    "@suid/material": "^0.18.0"
+  },
+  "scripts": {
+    "build": "rm -rf dist && vite build",
+    "server": "npm run build && vite preview",
+    "rebuild": "npm run build"
   }
 }
